--- a/templates/figures.html
+++ b/templates/figures.html
@@ -34,14 +34,6 @@
                 </div>
             </div>
             <hr>
-<!--             <div class="row margin-bottom-30">
-                <div class="col-md-12">
-                    <div class="service">
-                        <h3><i class="fa fa-info"></i> Other info...</h3>
-                        <p>poop</p>
-                    </div>
-                </div>
-            </div> -->
         </div>
 
         <div class="col-md-8">
@@ -75,5 +67,7 @@
 
 {% include 'footer.html' %}
 </div><!--/wrapper-->
+{% include 'scripts.html' %}
+
 </body>
 </html>
