--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,15 +8,15 @@
         <!-- End Logo -->
 
         <!-- Toggle get grouped for better mobile display -->
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="fa fa-bars"></span>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+<!--             <span class="sr-only">Toggle navigation</span>
+ -->            <span class="fa fa-bars"></span>
         </button>
         <!-- End Toggle -->
     </div><!--/end container-->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse mega-menu navbar-responsive-collapse">
+    <div class="collapse navbar-collapse" id="navbar">
         <div class="container">
             <ul class="nav navbar-nav">
                 <li>
