adds host comparison to official top 10 list

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -18,6 +18,48 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic);
 @import url(https://fonts.googleapis.com/css?family=Pathway+Gothic+One);
 
+/*[0./255,107./255,164./255], 
+             [255./255, 128./255, 14./255], 
+             [171./255, 171./255, 171./255], 
+             [89./255, 89./255, 89./255],
+             [95./255, 158./255, 209./255],
+             [200./255, 82./255, 0./255],
+             [255./255, 152./255, 150./255]*/
+div.entry-0 {
+	background-color: rgba(0, 107, 164, 0.5);
+}
+div.entry-1 {
+	background-color: rgba(255, 128, 14, 0.5);
+}
+div.entry-2 {
+	background-color: rgba(171, 171, 171, 0.5);
+}
+div.entry-3 {
+	background-color: rgba(89, 89, 89, 0.5);
+}
+div.entry-4 {
+	background-color: rgba(95, 158, 209, 0.5);
+}
+div.entry-5 {
+	background-color: rgba(200, 82, 0, 0.5);
+}
+div.entry-6 {
+	background-color: #8f8782;
+}
+div.entry-7 {
+	background-color: #8f8782;
+}
+div.entry-8 {
+	background-color: #8f8782;
+}
+div.entry-9 {
+	background-color: #8f8782;
+}
+div.entry-10 {
+	background-color: #8f8782;
+}
+
+
 h1, h2, h3, h4, h5, h6 {
   color: #555;    
   margin-top: 5px;
